# strava-unfollow

./: .gitignore  LICENSE  README.md  pyproject.toml
kudostracker/: auth.py  cli.py  follower_io.py  matching.py  paths.py  report.py  storage.py  sync.py
kudostracker/templates/: report.html.j2  report.md.j2
snippets/: extract_athletes.js
tests/: conftest.py  test_auth.py  test_cli.py  test_follower_io.py  test_matching.py  test_paths.py  test_report.py  test_storage.py  test_sync.py
